Fix class name collision

--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
 	<div class="menu-item">
 		<a href="/info/">Info</a>
 	</div>
-	<div id="theme-icon" class="icon theme-icon" title="Theme selection" ></div>
+	<div id="theme-icon" class="icon theme-icon" title="Theme selection"></div>
 </div>
 <div id="page"><div id="main">
 <h1>Tracking <div class="icon info-icon" id="info-main-icon"></div></h1>
 <div class="info-box" id="info-main" style="display:none">
-	<div class="light border">
+	<div class="light-box border">
 		<p>Select the syndicate level from a dropdown menu by clicking on the rank name,
 			then enter the reputation points for that level in the upper input field.
 			The bottom input field is used to calculate how a given amount of added standing for one syndicate will affect the others.
@@ -45,12 +45,12 @@
 		<p>Use the Update button to set the new ranks and reputation as the starting point, or the Save button to store the results locally if a supported web browser is used.</p>
 	</div>
 </div>
-<div class="container"><div class="synd steel light border">
+<div class="container"><div class="synd steel light-box border">
 	<div class="top">
 		<div class="icon logo big" title="Steel Meridian"></div>
 		<div class="rank-stars"></div>
 		<div class="rank-label-wrap"><span class="rank-label"></span></div>
-		<div class="ranklist dark border shadow"></div>
+		<div class="ranklist dark-box border shadow"></div>
 	</div>
 	<div class="values">
 		<input type="text" class="in" placeholder="Current rep" title="Current rep" tabindex="1">
@@ -61,12 +61,12 @@
 		<div class="progress-background"><div class="progress"></div></div>
 		<div class="diff">&#x200b;</div>
 	</div>
-</div></div><div class="container"><div class="synd hexis light border">
+</div></div><div class="container"><div class="synd hexis light-box border">
 	<div class="top">
 		<div class="icon logo big" title="Arbiters of Hexis"></div>
 		<div class="rank-stars"></div>
 		<div class="rank-label-wrap"><span class="rank-label"></span></div>
-		<div class="ranklist dark border shadow"></div>
+		<div class="ranklist dark-box border shadow"></div>
 	</div>
 	<div class="values">
 		<input type="text" class="in" placeholder="Current rep" title="Current rep" tabindex="1">
@@ -77,12 +77,12 @@
 		<div class="progress-background"><div class="progress"></div></div>
 		<div class="diff">&#x200b;</div>
 	</div>
-</div></div><div class="container"><div class="synd suda light border">
+</div></div><div class="container"><div class="synd suda light-box border">
 	<div class="top">
 		<div class="icon logo big" title="Cephalon Suda"></div>
 		<div class="rank-stars"></div>
 		<div class="rank-label-wrap"><span class="rank-label"></span></div>
-		<div class="ranklist dark border shadow"></div>
+		<div class="ranklist dark-box border shadow"></div>
 	</div>
 	<div class="values">
 		<input type="text" class="in" placeholder="Current rep" title="Current rep" tabindex="1">
@@ -93,12 +93,12 @@
 		<div class="progress-background"><div class="progress"></div></div>
 		<div class="diff">&#x200b;</div>
 	</div>
-</div></div><div class="container"><div class="synd perrin light border">
+</div></div><div class="container"><div class="synd perrin light-box border">
 	<div class="top">
 		<div class="icon logo big" title="The Perrin Sequence"></div>
 		<div class="rank-stars"></div>
 		<div class="rank-label-wrap"><span class="rank-label"></span></div>
-		<div class="ranklist dark border shadow"></div>
+		<div class="ranklist dark-box border shadow"></div>
 	</div>
 	<div class="values">
 		<input type="text" class="in" placeholder="Current rep" title="Current rep" tabindex="1">
@@ -109,12 +109,12 @@
 		<div class="progress-background"><div class="progress"></div></div>
 		<div class="diff">&#x200b;</div>
 	</div>
-</div></div><div class="container"><div class="synd veil light border">
+</div></div><div class="container"><div class="synd veil light-box border">
 	<div class="top">
 		<div class="icon logo big" title="Red Veil"></div>
 		<div class="rank-stars"></div>
 		<div class="rank-label-wrap"><span class="rank-label"></span></div>
-		<div class="ranklist dark border shadow"></div>
+		<div class="ranklist dark-box border shadow"></div>
 	</div>
 	<div class="values">
 		<input type="text" class="in" placeholder="Current rep" title="Current rep" tabindex="1">
@@ -125,12 +125,12 @@
 		<div class="progress-background"><div class="progress"></div></div>
 		<div class="diff">&#x200b;</div>
 	</div>
-</div></div><div class="container"><div class="synd loka light border">
+</div></div><div class="container"><div class="synd loka light-box border">
 	<div class="top">
 		<div class="icon logo big" title="New Loka"></div>
 		<div class="rank-stars"></div>
 		<div class="rank-label-wrap"><span class="rank-label"></span></div>
-		<div class="ranklist dark border shadow"></div>
+		<div class="ranklist dark-box border shadow"></div>
 	</div>
 	<div class="values">
 		<input type="text" class="in" placeholder="Current rep" title="Current rep" tabindex="1">
@@ -142,7 +142,7 @@
 		<div class="diff">&#x200b;</div>
 	</div>
 </div></div>
-<div id="total-results" class="light border" style="display:none"></div>
+<div id="total-results" class="light-box border" style="display:none"></div>
 <div id="settings" class="buttons"><button id="set-start" title="Set results as new starting point">Update</button><button id="clear-start" title="Reset">Clear</button><button id="save-start" title="Update and save results locally">Save</button></div>
 </div></div>
 <script type="text/javascript">
