--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div id="menu" class="shadow">
@@ -34,7 +33,10 @@
 	<div id="theme-icon" class="icon theme-icon" title="Theme selection"></div>
 </div>
 <div id="page"><div id="main">
-<h1>Tracking <div class="icon info-icon" id="info-main-icon"></div></h1>
+<h1>
+	Tracking&nbsp;
+	<div class="icon info-icon" id="info-main-icon"></div>
+</h1>
 <div class="info-box" id="info-main" style="display:none">
 	<div class="light-box border">
 		<p>Select the syndicate level from a dropdown menu by clicking on the rank name,
@@ -157,6 +159,5 @@
 	}
 })();
 </script>
-<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
